# StreetRAG

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: RAG_setting.json  active_city.json
docs/: ARCHITECTURE.md  EXPERIMENTAL_DESIGN.md  PUBLICATION_STRATEGY.md  RAG_DESIGN.md  SYNTAXRAG_ADVANTAGES.md  SYNTAXRAG_ARCHITECTURE.md  SYNTAXRAG_FLOW.md
experiments/: benchmark_syntax.py  cities.json  ground_truth.json  metrics.py  queries.json  run_eval.py
scripts/: download_network.py  integrate_features.py  query_with_llm.py  scan_data.py
streetrag/: __init__.py  cli.py
streetrag/agent/: __init__.py  loop.py  runner.py  tools.py
streetrag/core/: __init__.py  bootstrap.py  feature_catalog.py  feature_store.py  io.py  network_gpkg.py  settings_store.py  spatial_utils.py  street_network.py  workspace.py
streetrag/ingest/: __init__.py  columns.py  download.py  integrators.py  pipeline.py  readers.py
streetrag/llm/: __init__.py  client.py  language.py  retrieval.py
streetrag/reviews/: __init__.py  indexer.py  store.py
streetrag/routing/: __init__.py  street_route.py
streetrag/skills/: __init__.py  answer_directly.py  base.py  cluster_lisa.py  composite_index.py  correlate.py  multiscale_profile.py  stats.py  (+2 more)
tests/: conftest.py  test_agent_tools.py  test_bootstrap.py  test_catalog_delete.py  test_columns.py  test_core.py  test_feature_store.py  test_ingest.py  test_integrate_path.py  test_language.py  test_network_gpkg.py  test_radii.py  test_retrieval.py  test_settings_store.py  test_skills.py  test_syntax.py  test_zones.py
webapp/: server.py
(+19 files in other folders)
